# 05EPPY_A0F

./: .gitignore  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt
src/web_store/: __main__.py  run_app.py
src/web_store/templates/: basket.html  borrador.html  bought copy.html  bought.html  building.html  home.html  index.html  login.html  store.html
src/web_store/testing/: __init__.py  __main__.py  browser_driver.py  test_auth.py  test_basket.py  test_browser.py  test_final.py  test_login.py  test_store.py  unit_test.py
src/web_store/view/: basket.py  final.py  login.py  store.py
